Visited link color contrast against background fix

--- a/public/stylesheets/masters/dark_mode/dark_mode_site_screen_.css
+++ b/public/stylesheets/masters/dark_mode/dark_mode_site_screen_.css
@@ -17,7 +17,7 @@ a:visited:hover,
 }
 
 a:visited {
-  color: #999;
+  color: #c2c2c2;
 }
 
 table {
@@ -351,7 +351,7 @@ label.action:hover,
 .action:hover,
 .action:focus {
   border-color: #000;
-  color: #999;
+  color: #fafafa;
     box-shadow: inset 2px 2px 2px #000;
 }
 
@@ -505,7 +505,7 @@ fieldset fieldset.listbox {
 }
 
 .listbox .heading a:visited {
-  color: #999;
+  color: #c2c2c2;
 }
 
 .listbox .index {
